* Remove some ASS stuff * Improve windowed performance and scaling * Move SwitchInstance to Instance.SwitchTo * Fix sounds, default rawalle sounds * Remove some dependencies on projector name ( not all yet ) * Remove traceback from py error handling because that throws a new error OMEGA * Introduce smartbypass and smart playnextlock * Move LockInstance to Instance.Lock

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 ATTEMPTS*
 TheWall*.zip
-*-Spec.*
 *MyOptions*
 test.ahk
 *pycache*
@@ -8,6 +7,4 @@ test.ahk
 *.ops
 *.txt
 /data/*.json
-/media/*
-*-Mach.*
-*-Boyenn.*
+*-dev*
